index.css
body {
    background: #ffe4d1;
    /* background: linear-gradient(#d0f8ff, #ffcf99); */
    font-family: 'Calibri';
}

:root {
    touch-action: pan-x pan-y;
    height: 100% 
}

.test{
    background: #ffcf99; 
    background: #ffad99; 
    background: #dbff99; 
    background: #fff899; 
    background: #ff9999; 
    background: #e799ff; 
    background: #99f0ff; 
    background: #a78c7c; 
    background: #988fa3;

}

.itemBox {
    width: 80%;
    margin-left: 10%;
}

h1 {
    margin-left: 10%;
    font-size: 70px;
    text-align: center;
}

h2 {
    margin-left: 10%;
    font-size: 65px;
    width: 60%;
    display: inline-block;
}

input {
    text-align: center;
    font-size: 25px;
    font-weight: bold;
    padding: 5%;
}

.label_btn {
    width: 65%;
    text-align: left;
}

input[type=number] {
    width: 5%;
}

.del_btn {
    /* background: #6e1c1c;  */
    background: #d81212; 
    width: 15%;
    text-align: center;
}


/* input, h1, h2 {
    margin-left: 30%;
    margin-right: 30%;
    text-align: center;
    width: 40%;
    font-family: Calibri;
    font-weight: bold;
    font-size: xx-large;
}

h1 {
    margin-top: 25%;
}

input[type=number] {
    padding: 1.5%;
    border-radius: 40px;
    border-style: none;
} */

